# TALENT-2016

./: README.md  SoMaNa  YBM
HFOrsay/: DoxygenConfigFortran  a.out  base.f90  bcs.f90  cg.f90  compute_gamma.f90  compute_rho.f90  constants.f90  gauss_lag.f90  gausslag.f90  hforsay.f90  hfsolver.f90  ho.f90  lag_pol.f90  lag_roots.f90  laguerre.f90  laguerre_polynomial.f90  mainpage.txt  makefile  maths.f90  matrices.f90  members  occupancies.py  pair_density.py  plot3d.gnu  pot.f90  printer.f90  solver.f90  spatial.f90  tbme.f90  test.f90  test_compute_h.f90  time.f90
HFOrsay/Diago/: makefile  matrix_diag.f90  pr_eigen.f90  test.f90
HFOrsay/pairing/: anim.gnu  animation.gnu
HFOrsay/pairing_density/: anim.gnu  animation.gnu
HFOrsay/rho_subroutine/: compute_h.f90  compute_rho.f90  rho_computation.f90  test_compute_rho.f90
JusticeLeague/: team_members
MGES/: integration.c  squareWell  squareWell.c
PeTsBav2/: global.f90  infinite.input  infinite.input~  main  main.f90  main.f90~
PeTsBav2/W-S/: WS.input  main.f90
PeTsBav2/WEEK2/: WS.input  arrange.f90  global.f90  main.f90
PeTsBav2/WEEK3/: BCS.f90~  Simpson.f90  Skyrme.f90  WS.input  arrange.f90  global.f90  globals.f90  main.f90  main.f90~  makefile  nucleon.txt  numerov.f90  numerov.f90~  phi_initial.f90~  simpson.f90
PeTsBav2/backup/: Infinite_potential_eigenvectors.agr  infinite.input  main  makefile  proa
PeTsBav2/finite/: finite.input  (+4 more)
YBM/: readme.md
YBM/RR/Second_week/HF/: CMakeLists.txt  Eigen.txt  Esercizio  Esercizio.C  Esercizio.C~  Esercizio.h  Makefile  Oxy_density_np.txt  oggetto.C
YBM/RR/Second_week/HF/JGC/: Makefile
test_1/: toto
vNN/: makefile  renorm-gmatrix.f90  renorm-main.f90  renorm-modules.f90  renorm-nocore.f90  renorm-potentials.f  renorm-vlowk.f90  renorm.ini
(+570 files in other folders)
